hide all overflow to prevent scrolling

--- a/WorkloadExperiment.css
+++ b/WorkloadExperiment.css
@@ -14,6 +14,7 @@ body {
   margin:0;
   height: 100%;
   width: 100%;
+  overflow:hidden;
 }
 body.ws-error {
   background-color: #FFDDDD;
